Tablist fixed sticky text on mobile screens

--- a/src/assets/stylesheets/scss/components/_tablist.scss
+++ b/src/assets/stylesheets/scss/components/_tablist.scss
@@ -320,6 +320,14 @@
                 span {
                     display: block;
                 }
+                &[data-sticky-text] {
+                    strong {
+                        display: block;
+                    }
+                    &:after {
+                        display: none;
+                    }
+                }
             }
         }
         &__sticky-placeholder {
